# vigour

./: .env.example  .gitignore  README.md  kill-port.ps1  mcp-call.ps1  mcp-init.ps1  mcp-test.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-dev.ps1  slack-app-manifest.yaml  tsconfig.base.json  turbo.json
.opencode/commands/: autopilot.md
.opencode/skills/vigour/: SKILL.md
apps/slack-server/: .env.example  package.json
apps/slack-server/src/: confirm-flow.ts  env.ts  execute.ts  index.ts  intent.ts  llm.ts  mcp-server.ts  token-store.ts
apps/slack-server/src/filesystem/: index.ts
apps/slack-server/src/slack-api/: index.ts
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
docs/: architecture.md  product-spec.md  threat-model.md
infra/: docker-compose.yml
services/agent-worker/: README.md
services/agent-worker/app/: main.py
vigour-app/: index.html  package.json
vigour-app/cortex/: .env.example  install-espeak-ng.ps1  pyproject.toml  requirements.txt
vigour-app/cortex/vigour_cortex/: __init__.py  __main__.py  agent.py  asr.py  audio.py  config.py  mcp_client.py  tts.py  wake_word.py  ws_client.py
vigour-app/src/: App.tsx  styles.css
vigour-app/src-tauri/: Cargo.toml  tauri.conf.json
vigour-app/src-tauri/capabilities/: default.json
vigour-app/src-tauri/src/: lib.rs  main.rs  overlay.rs  slack_window.rs  websocket.rs
vigour-app/src/components/: AvatarCanvas.tsx  Timeline.tsx
vigour-app/src/lib/: mcp-client.ts  websocket-client.ts
