[package]
name = "vigour-app"
version = "0.1.0"
description = "Vigour overlay — transparent click-through agent UI for Slack"
authors = ["you"]
edition = "2021"

[lib]
name = "vigour_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[package.metadata]
tauri-bundler = { identifier = "com.vigour.app" }
tauri-winres = {}  # suppress missing metadata warning

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
  "Win32_UI_Accessibility",
  "Win32_Graphics_Gdi",
] }
